dark mode fix

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/raunak+back.png);
+    /* background-image: url(images/raunak+back.png); */
     background-size: cover;
     background-position: center;
 }
@@ -140,6 +140,27 @@ nav ul li a:hover::after{
 
 .header-text h1 span{
     color: #ff004f;
+}
+
+.row-header{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.header-image{
+    width: 45%;
+    height: 80%;
+    position: absolute;
+    bottom: 0px;
+    right: 100px;
+}
+
+.header-image img{
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
 }
 
 /* ------about-------- */
@@ -439,7 +460,7 @@ nav .fa-solid{
 /* ------css for mobile view------- */
 @media only screen and (max-width: 600px){
     #header{
-         background-image: url(images/raunak+front.png);
+         /* background-image: url(images/raunak+front.png); */
     }
 
     .header-text{
